--- a/public/apply.html
+++ b/public/apply.html
@@ -57,7 +57,7 @@
 
               <label class="fld full">
                 <div class="lab">프로필</div>
-                <textarea id="jsProfile" rows="3" placeholder="경력/학력/가능업무 상세"></textarea>
+                <textarea id="jsProfile" rows="3" placeholder="성별/생년월일/학력/가능업무 및 경력 상세히 기록"></textarea>
               </label>
 
               <label class="fld full">
